--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="CAET">
     <title>CAET - Centro de Apoio ao Estudante Técnico</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&callback=initMap"></script>
 </head>
